# gpu_project

./: .gitignore  CMakeLists.txt  generate_adj_matrix.c  generator_v2.c  graph  main.cu  parallel_mst.cu  random_graph_generator.cpp  random_graph_generator.h  sequential_mst.c  sequential_mst.cpp  sequential_mst.h  sequential_test.cpp
cuda/: main.cu  parallel_mst.cu  parallel_mst_test.cu  random_graph_generator.cpp  random_graph_generator.h  sequential_mst.cpp  sequential_mst.h
sequential/: random_graph_generator.cpp  random_graph_generator.h  sequential_mst.cpp
